--- a/css/style.css
+++ b/css/style.css
@@ -707,7 +707,7 @@ h6 {
 
 /* 학생들 프로필 */
 .user-card-img {
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   z-index: 3;
