--- a/css/style.css
+++ b/css/style.css
@@ -791,7 +791,7 @@ h6 {
   padding-top: 0 !important;      
   padding-bottom: 10px !important;
 
-  max-height: 300px;      
+  max-height: 24em;      
   overflow-y: auto;       
   padding-right: 10px; 
 }
