--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,7 @@ h6 {
 }
 
 .news-card {
-  padding-top: 0 !important;      
+  padding-top: 5px !important;      
   padding-bottom: 10px !important;
 
   max-height: 24em;      
