--- a/css/style.css
+++ b/css/style.css
@@ -788,7 +788,7 @@ h6 {
 }
 
 .news-card {
-  padding-top: 5px !important;      
+  padding-top: 0 !important;      
   padding-bottom: 10px !important;
 
   max-height: 24em;      
@@ -797,8 +797,10 @@ h6 {
 }
 
 .news-card ul {
-  list-style-type: circle !important;
-  margin-top: 0px !important;     
+
+  padding-top: 12px !important;   /* 5px -> 12px로 넉넉하게 변경 */
+  margin-top: 0px !important;
+  list-style-type: circle !important;     
   padding-left: 20px;
 }
 /* ========================================= */
