--- a/css/style.css
+++ b/css/style.css
@@ -788,45 +788,46 @@ h6 {
 }
 
 .news-card {
-  align-items: flex-start !important;
-  padding-top: 0px !important;      
-  padding-bottom: 0px !important;
-
-  max-height: 24em;      
-  overflow-y: auto !important;       
-  padding-right: 10px; 
+  display: block !important; 
+  overflow-y: auto !important; 
+  
+  /* 높이 및 여백 */
+  max-height: 24em;       
+  padding-top: 4px !important;     
+  padding-bottom: 4px !important;
+  padding-right: 10px;    
 }
 
+/* 리스트 내부 스타일 */
 .news-card ul {
-
   padding-top: 0px !important;   
   margin-top: 0px !important;
   list-style-type: circle !important;     
   padding-left: 20px;
 }
+
 /* ========================================= */
-/* 뉴스 영역 스크롤바 디자인 커스텀 */
+/* [Scrollbar] 스크롤바 디자인 */
 /* ========================================= */
 
-/* 스크롤바 전체 너비 설정 */
+/* 1. 스크롤바 전체 너비 */
 .news-card::-webkit-scrollbar {
-  width: 8px; /* 얇게 설정 */
+  width: 8px; 
+  background-color: transparent; 
 }
 
-/* 스크롤바 막대 (움직이는 부분) 디자인 */
+/* 2. 움직이는 막대 (회색, #ccc) */
 .news-card::-webkit-scrollbar-thumb {
   background-color: #ccc;    
-  border-radius: 4px;        /* 둥글게 */
+  border-radius: 4px;        
 }
-
-/* 스크롤바 막대에 마우스 올렸을 때 */
 .news-card::-webkit-scrollbar-thumb:hover {
   background-color: #999;    
 }
 
-/* 스크롤바 뒷배경 (트랙) */
+/* 3. 스크롤바 뒷배경 (회색, #f1f1f1) */
 .news-card::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* 아주 연한 배경색 */
+  background-color: #f1f1f1; 
   border-radius: 4px;
 }
 .col-lg-8 h5:not(:first-child),
