--- a/css/style.css
+++ b/css/style.css
@@ -792,7 +792,7 @@ h6 {
   overflow-y: auto !important; 
   
   /* 높이 및 여백 */
-  height: 250px;       
+  max-height: 250px;       
   padding-top: 2px !important;     
   padding-bottom: 2px !important;
   padding-right: 10px;    
