--- a/css/style.css
+++ b/css/style.css
@@ -959,7 +959,7 @@ section {
   /* 1. 위치 고정 (화면 오른쪽 아래) */
   position: fixed;
   bottom: 10px;  /* 바닥에서 10px 띄움 */
-  right: 10px;   /* 오른쪽에서 10px 띄움 */
+  left: 10px;   /* 오른쪽에서 10px 띄움 */
   z-index: 9999; /* 다른 요소들보다 위에 오도록 설정 */
   
   /* 2. 폰트 및 디자인 */
