--- a/css/style.css
+++ b/css/style.css
@@ -802,7 +802,7 @@ h6 {
 .news-card ul {
   padding-top: 0px !important;   
   margin-top: 0px !important;
-  list-style-type: circle !important;     
+  /*list-style-type: circle !important;     */
   padding-left: 20px;
 }
 
