--- a/css/style.css
+++ b/css/style.css
@@ -672,7 +672,7 @@ h6 {
 }
 
 /* ========================================= */
-/* [Modal] 팝업창 상세 내용(Details) 꾸미기 */
+/* [Modal] 팝업창 상세 내용(Details) 스타일 */
 /* ========================================= */
 
 #modal-details {
