--- a/css/style.css
+++ b/css/style.css
@@ -459,7 +459,7 @@ h6 {
 }
 
 /* ========================================= */
-/* [Publications] 네비게이션 바 설정 */
+/* [Publications] 네비게이션 바 스크롤 설정 */
 /* ========================================= */
 
 @media (min-width: 992px) {
